--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -91,7 +91,7 @@ hr {
     margin-left: 7.5px;
     margin-right: 7.5px;
     width: 160px;
-    min-height: 100%;
+    /* min-height: 100%; */
     max-height: 240px;
     list-style-type: none;
     display: inline-block;
